--- a/index.html
+++ b/index.html
@@ -7,16 +7,12 @@
 
 <!-- Meta Pixel Code -->
 <script>
-!function(f,b,e,v,n,t,s)
-{if(f.fbq)return;n=f.fbq=function(){n.callMethod?
-n.callMethod.apply(n,arguments):n.queue.push(arguments)};
-if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
-n.queue=[];t=b.createElement(e);t.async=!0;
-t.src=v;s=b.getElementsByTagName(e)[0];
-s.parentNode.insertBefore(t,s)}(window, document,'script',
-'https://connect.facebook.net/en_US/fbevents.js');
-fbq('init', '650415544428771');
-fbq('track', 'PageView');
+!function(f,b,e,v,n,t,s){if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+n.callMethod.apply(n,arguments):n.queue.push(arguments)};if(!f._fbq)f._fbq=n;
+n.push=n;n.loaded=!0;n.version='2.0';n.queue=[];t=b.createElement(e);t.async=!0;
+t.src=v;s=b.getElementsByTagName(e)[0];s.parentNode.insertBefore(t,s)}
+(window, document,'script','https://connect.facebook.net/en_US/fbevents.js');
+fbq('init', '650415544428771'); fbq('track', 'PageView');
 </script>
 <noscript><img height="1" width="1" style="display:none"
 src="https://www.facebook.com/tr?id=650415544428771&ev=PageView&noscript=1"
@@ -27,15 +23,17 @@ src="https://www.facebook.com/tr?id=650415544428771&ev=PageView&noscript=1"
   :root{
     --bg:#ffffff; --surface:#ffffff; --surface-2:#f5f5f7; --line:#e6e6e9;
     --ink:#1d1d1f; --muted:#6e6e73; --accent:#0071e3;
-    --radius:14px; --gap:10px; --card-h-sm:200px;
+    --radius:14px; --gap:10px;
+    /* IMAGEN GRANDE sin romper layout */
+    --card-h-sm: 280px;
   }
   *{box-sizing:border-box} html,body{height:100%}
   body{ margin:0; background:var(--bg); color:var(--ink);
         font-family:-apple-system,BlinkMacSystemFont,"SF Pro Text","SF Pro Display",Segoe UI,Roboto,Helvetica,Arial,sans-serif; }
 
-  /* NAV */
   .apple-nav{ position:sticky; top:0; z-index:20; height:44px; border-bottom:1px solid var(--line);
-    backdrop-filter:saturate(1.8) blur(20px); background:rgba(255,255,255,.86); }
+    -webkit-backdrop-filter:saturate(1.8) blur(20px); backdrop-filter:saturate(1.8) blur(20px);
+    background:rgba(255,255,255,.86); }
   .nav-inner{ max-width:1200px; margin:0 auto; height:100%;
     display:flex; align-items:center; justify-content:center; padding:0 12px; }
   .brand{ display:flex; align-items:center; gap:8px; text-decoration:none; color:inherit; }
@@ -65,33 +63,46 @@ src="https://www.facebook.com/tr?id=650415544428771&ev=PageView&noscript=1"
   .card:hover{ transform:translateY(-2px); box-shadow:0 12px 26px rgba(0,0,0,.06); border-color:#dcdde2; }
   .card-hit{ position:absolute; inset:0; border:0; background:transparent; cursor:pointer; }
 
-  /* IMG más grande en móvil */
-  .img{ position:relative; background:var(--surface-2); display:flex; align-items:center; justify-content:center; flex:1 1 58%; min-height:0; }
-  .img img{ width:92%; height:78%; object-fit:contain; } /* agrandado */
+  /* Imagen predominante, con proporción cuidada */
+  .img{
+    position:relative;
+    background:var(--surface-2);
+    display:flex; align-items:center; justify-content:center;
+    flex:1 1 64%;
+    min-height:190px;
+  }
+  .img img{
+    max-width:95%;
+    max-height:88%;
+    width:auto; height:auto;
+    object-fit:contain;
+  }
+  @media (max-width:420px){
+    :root{ --card-h-sm: 300px; }
+    .img{ min-height:210px; }
+  }
+
   .no-img{ color:var(--muted); font-size:13px; }
   .status{
     position:absolute; top:8px; left:8px; padding:4px 10px; border-radius:999px;
     background:#f2f2f7; border:1px solid var(--line); color:#3a3a3c; font-size:11px; font-weight:600;
   }
-  .ribbon{
-    position:absolute; top:10px; right:10px;
-    padding:4px 10px; border-radius:999px;
-    background:#ff3b30; color:#fff; font-size:11px; font-weight:800;
-    box-shadow:0 2px 6px rgba(0,0,0,.12); letter-spacing:.2px;
+  /* Pill sutil (NO diagonal) */
+  .off-badge{
+    position:absolute; top:10px; right:10px; padding:6px 10px;
+    background:#ff3b30; color:#fff; font-size:12px; font-weight:800; border-radius:999px;
+    box-shadow:0 2px 8px rgba(255,59,48,.25); pointer-events:none;
   }
 
-  .info{ flex:1 1 42%; padding:10px 10px 12px; display:flex; flex-direction:column; gap:6px; }
+  .info{ flex:1 1 36%; padding:10px 10px 12px; display:flex; flex-direction:column; gap:6px; }
   .name{ margin:0; font-weight:800; font-size:15px; line-height:1.15;
     display:-webkit-box; -webkit-line-clamp:1; -webkit-box-orient:vertical; overflow:hidden; }
   .price{ font-size:18px; font-weight:800; color:#000; }
-  .sub{ font-size:12.5px; color:var(--accent); font-weight:600; }
+  .sub{ font-size:12.5px; color:#0071e3; font-weight:600; }
   .cuotas-hint{ cursor:default; }
-
   .meta{ display:flex; flex-wrap:wrap; gap:6px; }
-  .chip{
-    background:#f6f7f8; border:1px solid var(--line); color:#1d1d1f;
-    font-size:12px; padding:5px 8px; border-radius:999px; display:inline-flex; align-items:center; gap:6px;
-  }
+  .chip{ background:#f6f7f8; border:1px solid var(--line); color:#1d1d1f;
+    font-size:12px; padding:5px 8px; border-radius:999px; display:inline-flex; align-items:center; gap:6px; }
   .dot{ width:10px; height:10px; border-radius:999px; background:var(--dot, #d1d5db); border:1px solid rgba(0,0,0,.08); }
 
   [data-status="vendido"] .status{ background:#fff0f0; color:#b00020; border-color:#ffd6d6; }
@@ -104,7 +115,7 @@ src="https://www.facebook.com/tr?id=650415544428771&ev=PageView&noscript=1"
   .modal header{ padding:18px 22px 0; text-align:center; }
   .modal h2{ margin:0; font-size:24px; font-weight:800; }
   .modal p.lead{ margin:6px 0 14px; color:#424245; font-size:15px; }
-  .benefits{ padding:0 18px 6px; margin:0; }
+  .benefits{ padding:0 18px 6px; }
   .benefits li{ list-style:none; display:flex; align-items:flex-start; gap:10px; margin:10px 0; color:#1d1d1f; }
   .benefits li .tick{ flex:0 0 auto; width:22px; height:22px; border-radius:999px; display:grid; place-items:center; background:#e6f0ff; color:#0071e3; font-weight:800; }
   .modal footer{ display:flex; gap:10px; justify-content:center; padding:16px 18px 22px; background:#f5f5f7; border-top:1px solid var(--line); }
@@ -115,12 +126,12 @@ src="https://www.facebook.com/tr?id=650415544428771&ev=PageView&noscript=1"
 
   /* DETALLE PRODUCTO */
   .overlay.detail{ z-index:50; }
-  .modal.detail{ width:min(980px,96vw); display:grid; grid-template-columns:1fr; }
-  .detail-media{ background:var(--surface-2); display:grid; place-items:center; padding:24px; border-bottom:1px solid var(--line); }
-  .detail-media img{ width:min(560px,90%); height:auto; object-fit:contain; }
+  .modal.detail{ width:min(900px,96vw); display:grid; grid-template-columns:1fr; }
+  .detail-media{ background:var(--surface-2); display:grid; place-items:center; padding:24px; border-bottom:1px solid var(--line); position:relative; }
+  .detail-media img{ width:min(520px,88%); height:auto; object-fit:contain; }
+  .detail-off{ position:absolute; top:12px; right:12px; background:#ff3b30; color:#fff; font-weight:800; font-size:12px; padding:6px 10px; border-radius:999px; }
   .detail-body{ padding:18px 18px 20px; display:grid; gap:10px; }
-  .detail-title{ margin:0; font-size:22px; font-weight:800; display:flex; align-items:center; gap:10px; }
-  .detail-title .off{ background:#ff3b30; color:#fff; font-size:12px; padding:4px 10px; border-radius:999px; font-weight:800; }
+  .detail-title{ margin:0; font-size:22px; font-weight:800; }
   .detail-meta{ display:flex; flex-wrap:wrap; gap:8px; }
   .prices{ display:grid; gap:6px; }
   .p-usd{ font-size:20px; font-weight:800; color:#000; }
@@ -165,7 +176,7 @@ src="https://www.facebook.com/tr?id=650415544428771&ev=PageView&noscript=1"
     <button class="card-hit" aria-label="Ver iPhone 11"></button>
     <div class="img">
       <div class="no-img">Sin imagen</div>
-      <span class="ribbon">10% OFF</span>
+      <span class="off-badge" aria-hidden="true">10% OFF</span>
     </div>
     <div class="info">
       <h3 class="name" title="iPhone 11">iPhone 11</h3>
@@ -185,7 +196,7 @@ src="https://www.facebook.com/tr?id=650415544428771&ev=PageView&noscript=1"
     <button class="card-hit" aria-label="Ver iPhone 13"></button>
     <div class="img">
       <img src="https://www.macstation.com.ar/web/image/product.template/98604/image_256/iPhone%2013" alt="iPhone 13" loading="lazy" />
-      <span class="ribbon">10% OFF</span>
+      <span class="off-badge" aria-hidden="true">10% OFF</span>
     </div>
     <div class="info">
       <h3 class="name" title="iPhone 13">iPhone 13</h3>
@@ -205,7 +216,7 @@ src="https://www.facebook.com/tr?id=650415544428771&ev=PageView&noscript=1"
     <button class="card-hit" aria-label="Ver iPhone 13"></button>
     <div class="img">
       <img src="https://www.macstation.com.ar/web/image/product.template/98604/image_256/iPhone%2013" alt="iPhone 13" loading="lazy" />
-      <span class="ribbon">10% OFF</span>
+      <span class="off-badge" aria-hidden="true">10% OFF</span>
     </div>
     <div class="info">
       <h3 class="name" title="iPhone 13">iPhone 13</h3>
@@ -225,7 +236,7 @@ src="https://www.facebook.com/tr?id=650415544428771&ev=PageView&noscript=1"
     <button class="card-hit" aria-label="Ver iPhone 13"></button>
     <div class="img">
       <img src="https://www.macstation.com.ar/web/image/product.template/98604/image_256/iPhone%2013" alt="iPhone 13" loading="lazy" />
-      <span class="ribbon">10% OFF</span>
+      <span class="off-badge" aria-hidden="true">10% OFF</span>
     </div>
     <div class="info">
       <h3 class="name" title="iPhone 13">iPhone 13</h3>
@@ -245,7 +256,7 @@ src="https://www.facebook.com/tr?id=650415544428771&ev=PageView&noscript=1"
     <button class="card-hit" aria-label="Ver iPhone 13 Pro"></button>
     <div class="img">
       <img src="https://www.macstation.com.ar/web/image/product.template/98604/image_256/iPhone%2013" alt="iPhone 13 Pro" loading="lazy" />
-      <span class="ribbon">10% OFF</span>
+      <span class="off-badge" aria-hidden="true">10% OFF</span>
     </div>
     <div class="info">
       <h3 class="name" title="iPhone 13 Pro">iPhone 13 Pro</h3>
@@ -265,7 +276,7 @@ src="https://www.facebook.com/tr?id=650415544428771&ev=PageView&noscript=1"
     <button class="card-hit" aria-label="Ver iPhone 14"></button>
     <div class="img">
       <img src="https://www.macstation.com.ar/web/image/product.template/98603/image_256/iPhone%2014" alt="iPhone 14" loading="lazy" />
-      <span class="ribbon">10% OFF</span>
+      <span class="off-badge" aria-hidden="true">10% OFF</span>
     </div>
     <div class="info">
       <h3 class="name" title="iPhone 14">iPhone 14</h3>
@@ -285,7 +296,7 @@ src="https://www.facebook.com/tr?id=650415544428771&ev=PageView&noscript=1"
     <button class="card-hit" aria-label="Ver iPhone 14"></button>
     <div class="img">
       <img src="https://www.macstation.com.ar/web/image/product.template/98603/image_256/iPhone%2014" alt="iPhone 14" loading="lazy" />
-      <span class="ribbon">10% OFF</span>
+      <span class="off-badge" aria-hidden="true">10% OFF</span>
     </div>
     <div class="info">
       <h3 class="name" title="iPhone 14">iPhone 14</h3>
@@ -305,7 +316,7 @@ src="https://www.facebook.com/tr?id=650415544428771&ev=PageView&noscript=1"
     <button class="card-hit" aria-label="Ver iPhone 14 Pro"></button>
     <div class="img">
       <img src="https://www.macstation.com.ar/web/image/product.template/98603/image_256/iPhone%2014" alt="iPhone 14 Pro" loading="lazy" />
-      <span class="ribbon">10% OFF</span>
+      <span class="off-badge" aria-hidden="true">10% OFF</span>
     </div>
     <div class="info">
       <h3 class="name" title="iPhone 14 Pro">iPhone 14 Pro</h3>
@@ -325,7 +336,7 @@ src="https://www.facebook.com/tr?id=650415544428771&ev=PageView&noscript=1"
     <button class="card-hit" aria-label="Ver iPhone 15"></button>
     <div class="img">
       <img src="https://www.macstation.com.ar/web/image/product.template/98601/image_256/iPhone%2015" alt="iPhone 15" loading="lazy" />
-      <span class="ribbon">10% OFF</span>
+      <span class="off-badge" aria-hidden="true">10% OFF</span>
     </div>
     <div class="info">
       <h3 class="name" title="iPhone 15">iPhone 15</h3>
@@ -345,7 +356,7 @@ src="https://www.facebook.com/tr?id=650415544428771&ev=PageView&noscript=1"
     <button class="card-hit" aria-label="Ver iPhone 15 Pro"></button>
     <div class="img">
       <img src="https://www.macstation.com.ar/web/image/product.template/98601/image_256/iPhone%2015" alt="iPhone 15 Pro" loading="lazy" />
-      <span class="ribbon">10% OFF</span>
+      <span class="off-badge" aria-hidden="true">10% OFF</span>
     </div>
     <div class="info">
       <h3 class="name" title="iPhone 15 Pro">iPhone 15 Pro</h3>
@@ -383,7 +394,10 @@ src="https://www.facebook.com/tr?id=650415544428771&ev=PageView&noscript=1"
 <div class="overlay detail" id="detail">
   <div class="modal detail" role="dialog" aria-labelledby="d-title" aria-modal="true">
     <button class="close-x" id="d-close" aria-label="Cerrar">×</button>
-    <div class="detail-media"><img id="d-img" alt="Producto" /></div>
+    <div class="detail-media">
+      <span class="detail-off">10% OFF</span>
+      <img id="d-img" alt="Producto" />
+    </div>
     <div class="detail-body">
       <h2 class="detail-title" id="d-title"></h2>
       <div class="detail-meta" id="d-meta"></div>
@@ -416,7 +430,7 @@ src="https://www.facebook.com/tr?id=650415544428771&ev=PageView&noscript=1"
     $ov.addEventListener('click', (e)=>{ if(e.target === $ov) close(); });
   })();
 
-  // Helpers en el cliente (mismo formato que arriba)
+  // Helpers en el cliente
   const COLOR_MAP = {"negro":"#111827","black":"#111827","midnight":"#0b1324","graphite":"#3a3a3c","blanco":"#f9fafb","white":"#f9fafb","starlight":"#f5f1e6","silver":"#d1d5db","azul":"#1d4ed8","blue":"#1d4ed8","deep purple":"#5b21b6","purple":"#7c3aed","rojo":"#dc2626","red":"#dc2626","verde":"#16a34a","green":"#16a34a","dorado":"#eab308","gold":"#eab308","rosa":"#fb7185","pink":"#fb7185"};
   const colorToHex = (name)=>{ if(!name) return '#d1d5db'; const key=String(name).trim().toLowerCase(); for(const k in COLOR_MAP){ if(key.includes(k)) return COLOR_MAP[k]; } return '#d1d5db'; };
   const battColor = (pct)=>{ const p=Math.max(0,Math.min(100,Number(String(pct).replace('%',''))||0)); const h=Math.round(p*1.2); return `hsl(${h} 70% 45%)`; };
@@ -442,7 +456,7 @@ src="https://www.facebook.com/tr?id=650415544428771&ev=PageView&noscript=1"
 
     $img.src = p.ImageURL || '';
     $img.alt = p.Name;
-    $title.innerHTML = esc(p.Name) + ' <span class="off">10% OFF</span>';
+    $title.textContent = p.Name;
 
     // chips: Color • Almacenamiento • Batería
     const chips = [];
@@ -455,7 +469,7 @@ src="https://www.facebook.com/tr?id=650415544428771&ev=PageView&noscript=1"
     $usd.textContent = fmtMoney(p.PriceUSD,'USD') ?? 'USD —';
     $ars.textContent = fmtMoney(p.PriceARS,'ARS') ?? '$ —';
 
-    // cuotas (dos líneas simples)
+    // cuotas (dos líneas)
     const lines = [];
     if (p.Cuota3) lines.push('3 cuotas de ' + '<strong>' + p.Cuota3 + '</strong>');
     if (p.Cuota6) lines.push('6 cuotas de ' + '<strong>' + p.Cuota6 + '</strong>');
